# cuda_networks

./: .gitattributes  .gitignore  00_train_all_models.sh  01_py_run_train.sh  02_py_run_test.sh  03_cpp_run_unit_tests.sh  04_cpp_debug_unit_tests.sh  05_cpp_run_train.sh  06_cpp_debug_train.sh  07_cpp_run_test.sh  08_cpp_debug_test.sh  Cuda_Networks.ipynb  Dockerfile  Doxyfile  Makefile  Makefile_cpu  Preprocess_Data.ipynb  README.md  backprop_test.sh  build_serve_docs.sh  debug_unit_tests.sh  deploy_docs.sh  deployment.yaml  main.cu  run_all_tests  run_test.sh  run_train.sh  run_unit_tests.sh  service.yaml  temp.py  test  test.c  test.cu  tests.sh
.ipynb_checkpoints/: Makefile-checkpoint
cpp/: CMakeLists.txt  bak_neural_network.cpp  bak_unit_tests.cpp  context.txt  linear_algebra.cpp  linear_algebra.h  neural_network.cpp  neural_network.h  run_train.sh  temp.txt  test  test.cpp  train  train.cpp  unit_tests.cpp  utils.cpp  utils.h
cpp/src/: linear_algebra.cpp  linear_algebra.h  neural_network.cpp  train.cpp
cpp/tests/: test_series.cpp
docs/html/: annotated.html  classMatrix-members.html  classMatrix.html  classMatrixAddVectorTest-members.html  classMatrixAddVectorTest.html  classMatrixArgmaxTest-members.html  classMatrixArgmaxTest.html  classMatrixCopyTest-members.html  classMatrixCopyTest.html  classMatrixDivideScalarTest-members.html  classMatrixDivideScalarTest.html  classMatrixInitTest-members.html  classMatrixInitTest.html  classMatrixInitializeTest-members.html  classMatrixInitializeTest.html  classMatrixMultiplyElementwiseTest-members.html  classMatrixMultiplyElementwiseTest.html  classMatrixMultiplyScalarTest-members.html  classMatrixMultiplyScalarTest.html  (+260 more)
models/: cpp_config.csv  cpp_history.csv  cpp_weights.csv  nn.csv  python_config.csv  python_history.csv  python_weights.csv
models_bak/: cpp_history.csv  cpp_weights.csv  python_history.csv  python_weights.csv
py_testing/: neural_network.py  test.py  train.py
python/: dnn.py  neural_network.py  test.py  train.py
scripts/: prepare_data.py  updatereadme.sh
src/: cuda_linear_algebra.c  cuda_linear_algebra.cu  cuda_linear_algebra.h  cuda_neural_network.c  cuda_neural_network.cu  cuda_neural_network.h  linear_algebra.c  linear_algebra.cu  linear_algebra.h  main.c  main.cu  mainpage.h  neural_network.c  neural_network.cu  neural_network.h  predict.cu  preview.cu  test_backprop.cu  test_backprop.cu.bak  tests.cu  train.cu
test_py/: neural_network.py  test.py  train.py
tests/: main_test_runner.cu  test_matrix_init.cu  test_matrix_initialize.cu  test_matrix_print.cu
(+141 files in other folders)
